Added empty dirs two

--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,6 @@
-files/certs/
-files/cert_template.jpg
-assets/logo.png
-assets/favicon.ico
-.DS_Store
-Thumbs.db
-ehthumbs.db
-Icon?
-*.swp
-*.swo
-*.bak
-*.tmp
-*.log
-.idea/
-.vscode/
-*.sublime-*
-cache/
-sessions/
-tmp/
-temp/
-*.cache
+files/certs/*
+!files/certs/.gitkeep
+
 config.php
 .env
 .env.*
@@ -28,12 +10,34 @@ config.php
 *.p12
 *.pfx
 *.csr
+
 *.sql
 *.dump
 *.gz
 *.tar
 *.zip
-files/certs/
-files/cert_template.jpg
+
+cache/
+sessions/
+tmp/
+temp/
+*.cache
+*.log
+
+.idea/
+.vscode/
+*.sublime-*
+
+*.swp
+*.swo
+*.bak
+*.tmp
+
+.DS_Store
+Thumbs.db
+ehthumbs.db
+Icon?
+
 assets/logo.png
 assets/favicon.ico
+files/cert_template.jpg
