Added id on jpg

--- a/config.php.example
+++ b/config.php.example
@@ -11,6 +11,7 @@ return [
     'font_path'     => __DIR__.'/fonts/Montserrat-Light.ttf',
     'coords' => [
         'name'   => ['x'=>600, 'y'=>420, 'size'=>28, 'angle'=>0],
+        'id'     => ['x'=>600, 'y'=>445, 'size'=>20, 'angle'=>0],
         'score'  => ['x'=>600, 'y'=>470, 'size'=>24, 'angle'=>0],
         'course' => ['x'=>600, 'y'=>520, 'size'=>24, 'angle'=>0],
         'date'   => ['x'=>600, 'y'=>570, 'size'=>24, 'angle'=>0],
