Expire date on cert

--- a/config.php.example
+++ b/config.php.example
@@ -23,6 +23,7 @@ return [
         'score'  => ['x'=>600, 'y'=>470, 'size'=>24, 'angle'=>0],
         'course' => ['x'=>600, 'y'=>520, 'size'=>24, 'angle'=>0],
         'date'   => ['x'=>600, 'y'=>570, 'size'=>24, 'angle'=>0],
+        'expires'=> ['x'=>600, 'y'=>600, 'size'=>20, 'angle'=>0],
         'qr'     => ['x'=>150, 'y'=>420, 'size'=>220],
         'int'    => ['x'=>820, 'y'=>670, 'size'=>14, 'angle'=>0],
     ],
