--- a/docs/nginx/certreg.conf
+++ b/docs/nginx/certreg.conf
@@ -52,16 +52,29 @@ server {
     location = / { return 403; }
     location ~ ^/vendor/ { return 403; }
     # Public
-    # Clean URL support: /verify → /verify.php
-    location = /verify { return 301 /verify.php?$query_string; }
+    # Clean URL support: /verify → internally run verify.php (also handle trailing slash)
+    location = /verify/ { return 301 /verify?$query_string; }
+    location = /verify {
+        limit_except GET HEAD { deny all; }
+        include snippets/fastcgi-php.conf;
+        fastcgi_param SCRIPT_FILENAME $document_root/verify.php;
+        fastcgi_pass unix:/run/php/php8.3-fpm.sock;
+    }
     location = /verify.php {
         limit_except GET HEAD { deny all; }
         include snippets/fastcgi-php.conf;
         fastcgi_pass unix:/run/php/php8.3-fpm.sock;
     }
     # Public status API
-    # Clean URL support: /api/status → /api/status.php
-    location = /api/status { return 301 /api/status.php?$query_string; }
+    # Clean URL support: /api/status → internally run /api/status.php (also handle trailing slash)
+    location = /api/status/ { return 301 /api/status?$query_string; }
+    location = /api/status {
+        limit_req zone=api_status burst=20 nodelay;
+        limit_except GET HEAD { deny all; }
+        include snippets/fastcgi-php.conf;
+        fastcgi_param SCRIPT_FILENAME $document_root/api/status.php;
+        fastcgi_pass unix:/run/php/php8.3-fpm.sock;
+    }
     location = /api/status.php {
         limit_req zone=api_status burst=20 nodelay;
         limit_except GET HEAD { deny all; }
