--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -129,3 +129,33 @@ jobs:
         with:
           name: playwright-report
           path: playwright-report
+
+  headers-check:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Set up PHP
+        uses: shivammathur/setup-php@v2
+        with:
+          php-version: '8.3'
+
+      - name: Start PHP server
+        working-directory: .
+        run: |
+          php -S 127.0.0.1:8080 -t . >/tmp/php-server.log 2>&1 &
+          echo $! > /tmp/php-server.pid
+          for i in {1..20}; do curl -sS -I http://127.0.0.1:8080/ >/dev/null && break; sleep 0.5; done
+
+      - name: Run headers check
+        env:
+          BASE_URL: http://127.0.0.1:8080
+          ENDPOINTS: "/verify.php /index.php"
+        run: bash scripts/security/check_headers.sh
+
+      - name: Stop PHP server
+        if: always()
+        run: |
+          kill $(cat /tmp/php-server.pid) || true
+          sleep 0.2
