--- a/docs/nginx/certreg.conf
+++ b/docs/nginx/certreg.conf
@@ -1,4 +1,7 @@
 # Rate limits
+# NOTE: Define limit_req_zone only once in the global http{} context.
+# If you already define these in /etc/nginx/conf.d/*.conf, do NOT redeclare them here
+# or you'll get: "limit_req_zone \"api_status\" is already bound to key ...".
 limit_req_zone $binary_remote_addr zone=api_status:10m rate=30r/m;
 limit_req_zone $binary_remote_addr zone=api_admin:10m  rate=10r/m;
 
@@ -36,7 +39,9 @@ server {
     add_header X-Content-Type-Options "nosniff" always;
     add_header Referrer-Policy "no-referrer" always;
     add_header Strict-Transport-Security "max-age=63072000; includeSubDomains; preload" always;
-    add_header Permissions-Policy "geolocation=(), microphone=(), camera=()" always;
+    # Match PHP headers so 4xx/5xx/static also include them
+    add_header Permissions-Policy "geolocation=(), microphone=(), camera=(), interest-cohort=()" always;
+    add_header X-XSS-Protection "0" always;
 
     # CSP лишається з PHP (header.php). Якщо хочеш тут – видали з PHP і додай її сюди єдиною.
 
