--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -60,8 +60,7 @@ jobs:
             cid VARCHAR(64) NOT NULL,
             version TINYINT NOT NULL DEFAULT 1,
             h CHAR(64) NOT NULL,
-            course VARCHAR(100) DEFAULT NULL,
-            grade VARCHAR(32) DEFAULT NULL,
+            extra_info VARCHAR(255) DEFAULT NULL,
             issued_date DATE DEFAULT NULL,
             valid_until DATE DEFAULT NULL,
             revoked_at DATETIME DEFAULT NULL,
