--- a/config.php.example
+++ b/config.php.example
@@ -18,8 +18,7 @@ return [
     'coords' => [
         'name'   => ['x'=>600, 'y'=>420, 'size'=>28, 'angle'=>0],
         'id'     => ['x'=>600, 'y'=>445, 'size'=>20, 'angle'=>0],
-        'score'  => ['x'=>600, 'y'=>470, 'size'=>24, 'angle'=>0],
-        'course' => ['x'=>600, 'y'=>520, 'size'=>24, 'angle'=>0],
+        'extra'  => ['x'=>600, 'y'=>520, 'size'=>24, 'angle'=>0],
         'date'   => ['x'=>600, 'y'=>570, 'size'=>24, 'angle'=>0],
         'expires'=> ['x'=>600, 'y'=>600, 'size'=>20, 'angle'=>0],
         'qr'     => ['x'=>150, 'y'=>420, 'size'=>220],
