JPG path hardcode changes

--- a/config.php.example
+++ b/config.php.example
@@ -13,6 +13,8 @@ return [
     // Branding
     'site_name' => "Реєстр нагород\n Національної академії Служби безпеки України",
     'logo_path' => '/assets/logo.png',
+    // Certificate background template (client-side rendering)
+    'cert_template_path' => '/files/cert_template.jpg',
 
     // Canvas coordinates for preview (client-side only)
     'coords' => [
