--- a/docs/nginx/certreg.conf
+++ b/docs/nginx/certreg.conf
@@ -90,7 +90,7 @@ server {
     }
 
     # Admin API (events -> GET; решта -> POST)
-    location ~ ^/api/(register|revoke|unrevoke|delete_token|bulk_action)\.php$ {
+    location ~ ^/api/(register|revoke|unrevoke|delete_token|bulk_action|branding_save)\.php$ {
         allow 94.45.140.194; allow 94.45.140.195; allow 94.45.140.196;
         allow 94.45.140.197; allow 94.45.140.198; allow 195.137.202.34;
         allow 94.158.95.219; deny all;
