--- a/docs/nginx/certreg.conf
+++ b/docs/nginx/certreg.conf
@@ -100,8 +100,19 @@ server {
         fastcgi_pass unix:/run/php/php8.3-fpm.sock;
     }
 
+    # Admin API list organizations (GET)
+    location = /api/org_list.php {
+        allow 94.45.140.194; allow 94.45.140.195; allow 94.45.140.196;
+        allow 94.45.140.197; allow 94.45.140.198; allow 195.137.202.34;
+        allow 94.158.95.219; deny all;
+        limit_req zone=api_admin burst=10 nodelay;
+        limit_except GET HEAD { deny all; }
+        include snippets/fastcgi-php.conf;
+        fastcgi_pass unix:/run/php/php8.3-fpm.sock;
+    }
+
     # Admin API (events -> GET; решта -> POST)
-    location ~ ^/api/(register|revoke|unrevoke|delete_token|bulk_action|branding_save|account_change_password|operator_create|operator_toggle_active|operator_reset_password|operator_rename|operator_delete)\.php$ {
+    location ~ ^/api/(register|revoke|unrevoke|delete_token|bulk_action|branding_save|account_change_password|operator_create|operator_toggle_active|operator_reset_password|operator_rename|operator_delete|operator_change_org|org_create|org_update|org_set_active|org_delete)\.php$ {
         allow 94.45.140.194; allow 94.45.140.195; allow 94.45.140.196;
         allow 94.45.140.197; allow 94.45.140.198; allow 195.137.202.34;
         allow 94.158.95.219; deny all;
