--- a/docs/nginx/certreg.conf
+++ b/docs/nginx/certreg.conf
@@ -100,8 +100,8 @@ server {
         fastcgi_pass unix:/run/php/php8.3-fpm.sock;
     }
 
-    # Admin API list organizations (GET)
-    location = /api/org_list.php {
+    # Admin API list organizations (GET) + list templates (GET)
+    location ~ ^/api/(org_list|templates_list)\.php$ {
         allow 94.45.140.194; allow 94.45.140.195; allow 94.45.140.196;
         allow 94.45.140.197; allow 94.45.140.198; allow 195.137.202.34;
         allow 94.158.95.219; deny all;
