--- a/docs/nginx/certreg.conf
+++ b/docs/nginx/certreg.conf
@@ -75,7 +75,7 @@ server {
 
 
     # Admin UI
-    location ~ ^/(issue_token|tokens|token|operator|events|admin|login|logout|qr|settings|settings_section)\.php$ {
+    location ~ ^/(issue_token|tokens|token|operator|organization|events|admin|login|logout|qr|settings|settings_section)\.php$ {
         allow 94.45.140.194;
         allow 94.45.140.195;
         allow 94.45.140.196;
